# laboratory1_QT_CMAKE

./: CMakeLists.txt  README.md
include/: CheckFile.h  Configuration.h  ConsoleFileManager.h  FileManager.h
src/: CheckFile.cpp  ConsoleFileManager.cpp  FileManager.cpp  main.cpp
tests/: 1.txt  2.txt  3.txt
